# leju-kuavo-challenge-cup-2026-ChengLihan

./: .gitignore  CLAUDE.md  access.sh  build.sh  download_workinghands.py  model.md  run.sh
src/challenge_cup_simulator/: CMakeLists.txt  README.md  package.xml  requirements.txt
src/challenge_cup_simulator/config/scenes/: scene1.yaml  scene2.yaml  scene3.yaml
src/challenge_cup_simulator/launch/: joy_control_sim.launch  load_kuavo_mujoco_challenge.launch
src/challenge_cup_simulator/models/charging_tray/: charging_tray.stl  model.xml
src/challenge_cup_simulator/models/screwdriver/: model.xml
src/challenge_cup_simulator/models/steel_pipe_fasteners/: model_no_supports.xml  steel_pipe_fasteners_no_supports.stl
src/challenge_cup_simulator/models/t_junction/: T_junction.STL  model.xml
src/challenge_cup_simulator/models/tray_rack/: README.md  model.xml
src/challenge_cup_simulator/scripts/: arm_keyboard_control.py  cam_info_pub.py  gripper_tf_publisher.py  leju_claw_keyboard.py  sim_leju_claw_interface.py  sim_timer.py
src/challenge_cup_simulator/test/: README.md  collect_scene2_dataset.py  readme.md
src/challenge_cup_simulator/test/collect_scene1_dataset/: README.md  collect_scene1_handoff_dataset.py
src/challenge_cup_simulator/test/collect_scene2_dataset/: README.md  challenge_task.py  scene2_data_collection_pipeline.py  scene2_part_grasp_ik.py
src/challenge_cup_simulator/utils/: challenge_sim_launcher.py  lidar_mid360_node.py  scene_builder.py
src/challenge_cup_task_template/: CMakeLists.txt  README.md  URDF_ARM_ANALYSIS.md
src/challenge_cup_task_template/config/: scene3_named_poses.yaml  scene3_nav.yaml
src/challenge_cup_task_template/scripts/: build_fk_table.py  build_fk_table_v2.py  challenge_task.py  collect_dataset_scene1.sh  collect_dataset_scene2.sh  collect_training_data.py  data_generator.py  fk_table_left.npy  fk_table_left_v2.npy  fk_table_right.npy  fk_table_right_v2.npy  publish_object_tf.py  scene1_express.py  scene2_sorting.py  scene2_yolo_detector.py  scene3_tray.py  screwdriver_demo_detector.py  train_networks.py
src/challenge_cup_task_template/scripts/rl/: reward.py  (+7 more)
src/challenge_cup_task_template/src/: arm_pose_manager.py  base_navigator.py  fastlio_localization.py  lidar_perception.py  perception_helper.py  ros_interfaces.py  scene3_controller.py  skill_bridge.py
(+1146 files in other folders)
