<?xml version="1.0"?>
<package format="2">
  <name>challenge_cup_simulator</name>
  <version>0.0.0</version>
  <description>Challenge Cup MuJoCo simulation scenes for Kuavo biped_s52.</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>humanoid_controllers</exec_depend>
  <exec_depend>humanoid_interface_ros</exec_depend>
  <exec_depend>kuavo_msgs</exec_depend>
  <exec_depend>kuavo_assets</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
